--- a/package.json
+++ b/package.json
@@ -4,22 +4,23 @@
   "private": true,
   "homepage": "https://vsdmitriy17.github.io/goit-react-hw-08-phonebook/",
   "dependencies": {
-    "@emotion/react": "^11.10.4",
-    "@emotion/styled": "^11.10.4",
-    "@mui/material": "^5.10.8",
-    "@reduxjs/toolkit": "^1.8.3",
-    "@testing-library/jest-dom": "^5.16.3",
-    "@testing-library/react": "^12.1.4",
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
+    "@mui/material": "^5.8.6",
+    "@reduxjs/toolkit": "^1.8.2",
+    "@testing-library/jest-dom": "^5.16.1",
+    "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.1.2",
-    "nanoid": "^4.0.0",
+    "axios": "^0.27.2",
+    "nanoid": "^3.3.4",
     "prop-types": "^15.8.1",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
-    "react-loader-spinner": "^5.3.4",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-loader-spinner": "^5.1.5",
     "react-redux": "^8.0.2",
-    "react-scripts": "5.0.1",
-    "react-toastify": "^9.0.8",
+    "react-router-dom": "^6.3.0",
+    "react-scripts": "5.0.0",
+    "react-toastify": "^9.0.5",
     "redux-persist": "^6.0.0",
     "web-vitals": "^2.1.3"
   },
@@ -47,5 +48,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "redux-devtools-extension": "^2.13.9"
   }
 }
